--- a/kubernetes/components/common/substitutions/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/substitutions/cluster-secrets.sops.yaml
@@ -8,7 +8,9 @@ stringData:
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:32I13WpDrKy3wOSco+nNKMj2kdcuKH+97jr4GUAw9bu1r2Om,iv:5b1U1TrmzExDlP6mSo5kG2zS8WgEioW37fs8jrt6gxE=,tag:SaulV+U5pt8tf9/jxLg2dA==,type:str]
     SECRET_TAILSCALE_ADMIN: ENC[AES256_GCM,data:Y7lV74tCpKKySqAm,iv:eRbSznekYKvKLQUTaL83ey1lpWfminFz4Q2zdJ/Ym6s=,tag:TZcSi5v5xuByVFoOQHpGVg==,type:str]
     SECRET_NAS_IP: ENC[AES256_GCM,data:S89CCLY3shUYhQ==,iv:qVuglqCCIuxr3MaDv6OjgYIF3F/e5bM7aclBfM5s3Js=,tag:sSbl1BNMxRlHOdWrQxcwVQ==,type:str]
-    SECRET_NFS_PATH_GAMES: ENC[AES256_GCM,data:ay0UUobboNzD5M1HQOF4/pcVl1Yeg2ouD99r,iv:2cnrt4/YFWgcwksXRrqYBMZe6nsRUlcyu+Xel1oM2I0=,tag:yehaqMV6Cl+DryULIBIG8w==,type:str]
+    SECRET_NFS_PATH_ROMM_ASSETS: ENC[AES256_GCM,data:HjMNrrHCazqgvxyQVjAqGDVQ3VbxqBD7T/vt/50ATA==,iv:iahptuxR7lTZxcYu6ziDWUH4bJrGrHfuJ8wdICh9LVI=,tag:maLyQfqoMfVa3rliF8wWDg==,type:str]
+    SECRET_NFS_PATH_ROMM_LIBRARY: ENC[AES256_GCM,data:nvikPEneBosbYiabKEyL8UZpxUz37/vp7N01mINMke0=,iv:VlQAklYMhNGfqwtwApDfETi0HwG5+lk9wkduBRROQig=,tag:XyRL0yNFQGsPX2aw/CkIDg==,type:str]
+    SECRET_NFS_PATH_ROMM_RESOURCES: ENC[AES256_GCM,data:PVwOGTv+4Y0cEmCYLZmr4ibOih+WIGssOp7eyFk7CGSv6w==,iv:sTvh5gpczs3dXkGCwtwQk8nnftlpUOrBHsOAiOkMWSY=,tag:qDxchwTW9sKqZfHzwJRAFw==,type:str]
     SECRET_NFS_PATH_IMMICH: ENC[AES256_GCM,data:5hpt0M33iZBbKaYw6aTgg1396kE=,iv:X3fQKL4eWsgmeMFb8NV2agHvgI4YJ8l4bfnhOghILo4=,tag:t8zmU4/aBFGoBGmdcxRnOg==,type:str]
     SECRET_NFS_PATH_MEDIA: ENC[AES256_GCM,data:bVA9rM9zTQnPa80ANLOlSlkhdeI=,iv:tfiZhLjWMtWCpyIfBa++uTrHesMtUrH2Rwk42ugoIEg=,tag:G/pEBe2YZG4BFu/0AjrKxg==,type:str]
     SECRET_NFS_PATH_MINIO: ENC[AES256_GCM,data:lRWSZrb39E6S0OUHK8jhZLGHSw==,iv:qvRIAOCiFa3oWH+EK0lsv7+X0hxfCKAjs4rAYRdIVck=,tag:55xH2df0EgBfzn+Q1TvBfQ==,type:str]
@@ -26,8 +28,8 @@ sops:
             Vmg3V1hoRzdEMHVwblhEazR2ZFlNTlEKrR8H1dmbtc1tNeVKD9BSu2kY7xgRH+uo
             Xct3NGYDiJqr9NlrJrV6LbsB6RliBRhjkjt8mfiFn6pGMIj5wPnRpw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-10T21:41:36Z"
-    mac: ENC[AES256_GCM,data:oY5EJd01eWWC0UYjX55SSoSYMzqapq2hueDJmo9XuzejUs8eX08QWQ0Tz82jx+CJJMTtSulj3/wMp/OzmNspCce6QZSmfPLN9hjuJNKQ49paf6s+MKrV+zYI3K8tKAkFrE5E6bwfJc9DG0Fx7JyZdq1fGwsHxoF3TGhUUOWszGA=,iv:8u+EJ44a32cz4+VBAx3XRkTAEB41zfqN1jBQGB7hMoE=,tag:zrmqTvtIyXtH+ttvrE8qZQ==,type:str]
+    lastmodified: "2025-04-14T14:01:25Z"
+    mac: ENC[AES256_GCM,data:qvobIz8Y8b+2TI09fXIWBbnwMByqygVv+ayrEgCtC2Ck0zuHnMQiJ1ra7NkZP5QD9k500zrO3xUocBdxKy8+Unk0HLcLgc30utaUoRGOa/6xl2M1kIphudR3qnHL5TFtPfM7X5veLESrmmJOK0Pfh1oQNF4luO1HqtmqjdIeTl0=,iv:DtY9BwQU4Bh+u2WC+M2uIipKnJfDXoVCYZgm4E8H0U0=,tag:9xnuijafgr9ckYqt5wMLhA==,type:str]
     encrypted_regex: ^(data|stringData)$
     mac_only_encrypted: true
     version: 3.10.1
