--- a/kubernetes/apps/security/onepassword/ks.yaml
+++ b/kubernetes/apps/security/onepassword/ks.yaml
@@ -18,7 +18,7 @@ spec:
       name: *app
       namespace: *namespace
   healthCheckExprs:
-    - apiVersion: external-secrets.io/v1beta1
+    - apiVersion: external-secrets.io/v1
       kind: ClusterSecretStore
       current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
       failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
