--- a/.renovate/packageRules.json5
+++ b/.renovate/packageRules.json5
@@ -17,7 +17,7 @@
     {
       description: "Custom versioning for MinIO",
       matchDatasources: ["docker"],
-      matchPackageNames: ["**/minio/"],
+      matchPackageNames: ["**/minio/minio"],
       versioning: "regex:^RELEASE\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z$",
     },
     {
