chore(romm): disable volsync & temp disable deployment

--- a/kubernetes/apps/games/romm/ks.yaml
+++ b/kubernetes/apps/games/romm/ks.yaml
@@ -10,7 +10,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../../components/volsync
+    - ../../../../components/pvc
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
@@ -25,15 +25,9 @@ spec:
   postBuild:
     substitute:
       APP: *app
-      APP_UID: &uid ${CONFIG_APP_UID}
-      APP_GID: *uid
-      VOLSYNC_CLAIM: *app
-      VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
-      VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_BLOCK}
-      VOLSYNC_SNAPSHOTCLASS: *storageClass
-      VOLSYNC_CACHE_ACCESSMODES: *accessModes
-      VOLSYNC_CAPACITY: &capacity 5Gi
-      VOLSYNC_CACHE_CAPACITY: *capacity
+      PVC_ACCESSMODES: ReadWriteOnce
+      PVC_STORAGECLASS: ${CLUSTER_STORAGE_BLOCK}
+      PVC_CAPACITY: 1Gi
   prune: true
   retryInterval: 2m
   sourceRef:
