--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -105,7 +105,7 @@ spec:
         globalMounts:
           - path: /etc/nginx/conf.d
       romm-data:
-        existingClaim: ${VOLSYNC_CLAIM}
+        existingClaim: *app
         globalMounts:
           - path: /romm
             readOnly: false
