fix(hoarder): migrate to new name

--- a/kubernetes/apps/self-hosted/karakeep/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name hoarder
+  name: &name karakeep
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -14,9 +14,9 @@ spec:
       data:
         NEXTAUTH_SECRET: "{{ .NEXTAUTH_SECRET }}"
         MEILI_MASTER_KEY: "{{ .MEILI_MASTER_KEY }}"
-        OPENAI_API_KEY: "{{ .OPENAI_API_KEY_HOARDER }}"
+        OPENAI_API_KEY: "{{ .OPENAI_API_KEY_KARAKEEP }}"
   dataFrom:
     - extract:
-        key: hoarder
+        key: karakeep
     - extract:
         key: openai
