--- a/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app hoarder
+  name: &app karakeep
 spec:
   interval: 1h
   chartRef:
@@ -18,16 +18,16 @@ spec:
       retries: 3
   values:
     controllers:
-      hoarder:
+      karakeep:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
           web:
             image:
-              repository: ghcr.io/hoarder-app/hoarder
-              tag: 0.23.2@sha256:04956fc529d4675cfa849313f270ae863094d1f2be4c922172f06a62ef9bd4ac
+              repository: ghcr.io/karakeep-app/karakeep
+              tag: 0.24.1@sha256:e72341d7626b7f92ea9b4d5e1a671ae1b8b2f6d85873a5f482e836978b650f99
             env:
-              BROWSER_WEB_URL: http://hoarder-chrome.self-hosted.svc.cluster.local:9222
+              BROWSER_WEB_URL: http://karakeep-chrome.self-hosted.svc.cluster.local:9222
               COREPACK_INTEGRITY_KEYS: 0
               CRAWLER_DOWNLOAD_BANNER_IMAGE: true
               CRAWLER_ENABLE_ADBLOCKER: true
@@ -36,7 +36,7 @@ spec:
               DISABLE_NEW_RELEASE_CHECK: true
               DISABLE_SIGNUPS: true
               INFERENCE_CONTEXT_LENGTH: 4096
-              MEILI_ADDR: http://hoarder-meilisearch.self-hosted.svc.cluster.local:7700
+              MEILI_ADDR: http://karakeep-meilisearch.self-hosted.svc.cluster.local:7700
               NEXTAUTH_URL: "https://{{ .Release.Name }}.${SECRET_DOMAIN}"
               OCR_LANGS: eng,swe
             envFrom: &envFrom
@@ -144,29 +144,32 @@ spec:
           http:
             port: 7700
     ingress:
-      hoarder:
+      karakeep:
         className: internal
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-            paths:
+            paths: &paths
               - path: /
                 service:
                   identifier: web
                   port: http
+          - host: &customHost hoarder.${SECRET_DOMAIN}
+            paths: *paths
         tls:
           - hosts:
               - *host
+              - *customHost
     persistence:
       cache:
         type: emptyDir
         advancedMounts:
-          hoarder:
+          karakeep:
             web:
               - path: /app/apps/web/.next/cache
       data:
         existingClaim: ${VOLSYNC_CLAIM}
         advancedMounts:
-          hoarder:
+          karakeep:
             web:
               - path: /hoarder_data
                 subPath: hoarder_data
@@ -176,6 +179,6 @@ spec:
       tmp:
         type: emptyDir
         advancedMounts:
-          hoarder:
+          karakeep:
             chrome:
               - path: /tmp
