--- a/kubernetes/apps/self-hosted/karakeep/ks.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app hoarder
+  name: &app karakeep
   namespace: &namespace self-hosted
 spec:
   commonMetadata:
@@ -19,7 +19,7 @@ spec:
     - name: volsync
       namespace: storage
   interval: 1h
-  path: ./kubernetes/apps/self-hosted/hoarder/app
+  path: ./kubernetes/apps/self-hosted/karakeep/app
   postBuild:
     substitute:
       APP: *app
