--- a/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
               CRAWLER_DOWNLOAD_BANNER_IMAGE: true
               CRAWLER_ENABLE_ADBLOCKER: true
               CRAWLER_STORE_SCREENSHOT: true
-              DATA_DIR: /hoarder_data
+              DATA_DIR: /karakeep_data
               DISABLE_NEW_RELEASE_CHECK: true
               DISABLE_SIGNUPS: true
               INFERENCE_CONTEXT_LENGTH: 4096
@@ -171,8 +171,8 @@ spec:
         advancedMounts:
           karakeep:
             web:
-              - path: /hoarder_data
-                subPath: hoarder_data
+              - path: /karakeep_data
+                subPath: karakeep_data
             meilisearch:
               - path: /meili_data
                 subPath: meili_data
