fix(dcsi): modify iscsiDirHostPath to work with talos v1.10.0

--- a/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
             value: nsenter
           - name: ISCSIADM_HOST_PATH
             value: /usr/local/sbin/iscsiadm
-        iscsiDirHostPath: /usr/local/etc/iscsi
+        iscsiDirHostPath: /var/lib/iscsi
         iscsiDirHostPathType: ""
       priorityClassName: system-node-critical
     csiProxy:
