chore(blackbox-exporter): re-enable unifi service monitor

--- a/kubernetes/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
@@ -110,10 +110,10 @@ spec:
           name: pve-ipmi-icmp
           url: pve-ipmi.${SECRET_DOMAIN}
         # UniFi Controller
-        # - module: http_2xx
-        #   name: unifi-http
-        #   url: "https://unifi.${SECRET_DOMAIN}"
-        # - module: icmp
-        #   name: unifi-icmp
-        #   url: unifi.${SECRET_DOMAIN}
+        - module: http_2xx
+          name: unifi-http
+          url: "https://unifi.${SECRET_DOMAIN}"
+        - module: icmp
+          name: unifi-icmp
+          url: unifi.${SECRET_DOMAIN}
 
