--- a/kubernetes/apps/observability/unpoller/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/unpoller/app/externalsecret.yaml
@@ -12,8 +12,7 @@ spec:
     name: *name
     template:
       data:
-        UP_UNIFI_DEFAULT_USER: "{{ .UP_UNIFI_DEFAULT_USER }}"
-        UP_UNIFI_DEFAULT_PASS: "{{ .UP_UNIFI_DEFAULT_PASS }}"
+        UP_UNIFI_DEFAULT_API_KEY: "{{ .UNPOLLER_UNIFI_API_KEY }}"
   dataFrom:
     - extract:
         key: unpoller
