--- a/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
@@ -33,6 +33,7 @@ spec:
               UP_UNIFI_DEFAULT_VERIFY_SSL: true
               UP_PROMETHEUS_HTTP_LISTEN: 0.0.0.0:80
               UP_INFLUXDB_DISABLE: true
+              UP_UNIFI_DEFAULT_SAVE_DPI: true
             envFrom:
               - secretRef:
                   name: *app
