--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -4,14 +4,20 @@ name: Labeler
 
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     branches: ["main"]
+
+permissions:
+  contents: read
 
 jobs:
   labeler:
     name: Labeler
     runs-on: ubuntu-latest
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - name: Generate Token
         uses: actions/create-github-app-token@df432ceedc7162793a195dd1713ff69aefc7379e # v2.0.6
@@ -23,5 +29,5 @@ jobs:
       - name: Labeler
         uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
         with:
-          configuration-path: .github/labeler.yaml
           repo-token: "${{ steps.app-token.outputs.token }}"
+          configuration-path: .github/labeler.yaml
