--- a/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
@@ -78,5 +78,5 @@ spec:
           - port: http
             scheme: http
             path: /metrics
-            interval: 2m # UniFi API only polls at 2m intervals.
-            scrapeTimeout: 10s
+            interval: 15s
+            scrapeTimeout: 5s
