--- a/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
@@ -41,6 +41,7 @@ spec:
               UP_PROMETHEUS_HTTP_LISTEN: 0.0.0.0:80
               UP_LOKI_DISABLE: false
               UP_LOKI_URL: http://loki-headless.observability.svc.cluster.local:3100
+              UP_POLLER_DEBUG: true
             envFrom:
               - secretRef:
                   name: *app
