--- a/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/unpoller/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
               UP_INFLUXDB_DISABLE: true
               UP_PROMETHEUS_HTTP_LISTEN: 0.0.0.0:80
               UP_LOKI_DISABLE: false
-              UP_LOKI_URL: http://loki-headless.observability.svc.cluster.local:3100
+              UP_LOKI_URL: https://loki.${SECRET_DOMAIN}
               UP_POLLER_DEBUG: true
             envFrom:
               - secretRef:
