--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -175,7 +175,7 @@ spec:
               path: /var/lib/grafana/dashboards/system-folder
           - name: unifi
             orgId: 1
-            folder: Unifi
+            folder: UniFi
             type: file
             disableDeletion: false
             editable: true
