--- a/kubernetes/apps/network/cloudflare-dns/app/externalsecret.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name external-dns-cloudflare
+  name: &name cloudflare-dns
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -13,7 +13,8 @@ spec:
     creationPolicy: Owner
     template:
       data:
-        CF_API_TOKEN: "{{ .CLOUDFLARE_API_TOKEN }}"
+        CF_API_TOKEN: "{{ .CLOUDFLARE_DNS_TOKEN }}"
+        CF_ZONE_ID: "{{ .CLOUDFLARE_ZONE_ID }}"
   dataFrom:
     - extract:
         key: cloudflare
