--- a/kubernetes/apps/network/cloudflare-dns/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
-  name: external-dns
+  name: cloudflare-dns
 spec:
   interval: 5m
   layerSelector:
@@ -22,19 +22,17 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app external-dns
+  name: &app cloudflare-dns
 spec:
   interval: 1h
   chartRef:
     kind: OCIRepository
-    name: external-dns
+    name: cloudflare-dns
   install:
-    disableSchemaValidation: true # Ref: https://github.com/kubernetes-sigs/external-dns/issues/5206
     remediation:
       retries: -1
   upgrade:
     cleanupOnFail: true
-    disableSchemaValidation: true # Ref: https://github.com/kubernetes-sigs/external-dns/issues/5206
     remediation:
       retries: 3
   values:
@@ -45,7 +43,12 @@ spec:
       - name: &name CF_API_TOKEN
         valueFrom:
           secretKeyRef:
-            name: &secret external-dns-cloudflare
+            name: *app
+            key: *name
+      - name: &name CF_ZONE_ID
+        valueFrom:
+          secretKeyRef:
+            name: *app
             key: *name
     extraArgs:
       - --cloudflare-dns-records-per-page=1000
@@ -55,11 +58,13 @@ spec:
       - --events
       - --ignore-ingress-tls-spec
       - --ingress-class=external
+      - --zone-id-filter=$(CF_ZONE_ID)
+    domainFilters: ["${SECRET_DOMAIN}"]
     policy: sync
     sources: ["crd", "ingress"]
-    txtPrefix: k8s.
+    triggerLoopOnEvent: true
     txtOwnerId: default
-    domainFilters: ["${SECRET_DOMAIN}"]
+    txtPrefix: k8s.
     resources:
       requests:
         cpu: 10m
@@ -69,4 +74,4 @@ spec:
     serviceMonitor:
       enabled: true
     podAnnotations:
-      secret.reloader.stakater.com/reload: *secret
+      secret.reloader.stakater.com/reload: *app
