Revert "chore(echo): temp enable deployment & change to internal ingress"
This reverts commit 565bc4ac5c60009c3442f110d89023ddce32dd9e.

--- a/kubernetes/apps/network/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/network/echo-server/app/helmrelease.yaml
@@ -75,9 +75,9 @@ spec:
             scrapeTimeout: 10s
     ingress:
       app:
-        # annotations:
-        #   external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
-        className: internal
+        annotations:
+          external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+        className: external
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
