feat(external-dns): merge cloudflare & unifi

--- a/kubernetes/apps/network/external-dns/unifi/externalsecret.yaml
+++ b/kubernetes/apps/network/external-dns/unifi/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name unifi-dns
+  name: &name external-dns-unifi
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
