--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -8,7 +8,7 @@ components:
 resources:
   # Flux-Kustomizations
   - ./cloudflared/ks.yaml
-  # - ./echo-server/ks.yaml
+  - ./echo-server/ks.yaml
   - ./external-dns/ks.yaml
   - ./ingress-nginx/ks.yaml
   - ./tailscale-operator/ks.yaml
