--- a/kubernetes/apps/network/tailscale-operator/app/externalsecret.yaml
+++ b/kubernetes/apps/network/tailscale-operator/app/externalsecret.yaml
@@ -12,8 +12,8 @@ spec:
     name: *name
     template:
       data:
-        CLIENT_ID: "{{ .TAILSCALE_CLIENT_ID }}"
-        CLIENT_SECRET: "{{ .TAILSCALE_CLIENT_SECRET }}"
+        client_id: "{{ .TAILSCALE_CLIENT_ID }}"
+        client_secret: "{{ .TAILSCALE_CLIENT_SECRET }}"
   dataFrom:
     - extract:
         key: tailscale
