--- a/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
@@ -29,25 +29,23 @@ spec:
     kind: OCIRepository
     name: tailscale-operator
   install:
+    crds: CreateReplace
     remediation:
       retries: -1
   upgrade:
     cleanupOnFail: true
+    crds: CreateReplace
     remediation:
       retries: 3
-  valuesFrom:
-    - kind: Secret
-      name: *app
-      valuesKey: CLIENT_ID
-      targetPath: oauth.clientId
-    - kind: Secret
-      name: *app
-      valuesKey: CLIENT_SECRET
-      targetPath: oauth.clientSecret
   values:
-    operatorConfig:
-      hostname: "tailscale-operator"
-      defaultTags:
-        - "tag:k8s"
     apiServerProxyConfig:
       mode: "true"
+    oauthSecretVolume:
+      secret:
+        secretName: *app
+    operatorConfig:
+      defaultTags:
+        - "tag:k8s"
+      hostname: *app
+      podAnnotations:
+        secret.reloader.stakater.com/reload: *app
