--- a/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
@@ -49,3 +49,5 @@ spec:
       hostname: *app
       podAnnotations:
         secret.reloader.stakater.com/reload: *app
+    serviceMonitor:
+      enabled: true
