--- a/kubernetes/apps/network/tailscale-operator/connector/connector.yaml
+++ b/kubernetes/apps/network/tailscale-operator/connector/connector.yaml
@@ -5,6 +5,10 @@ metadata:
   name: subnet-router
 spec:
   hostname: home-k8s-router
+  metrics:
+    enable: true
+    serviceMonitor:
+      enable: true
   subnetRouter:
     advertiseRoutes:
       - 192.168.20.0/24
