--- a/kubernetes/components/common/substitutions/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/substitutions/cluster-secrets.sops.yaml
@@ -7,7 +7,7 @@ stringData:
     SECRET_EMAIL: ENC[AES256_GCM,data:byKsZgLuKsOpC7kang==,iv:Kqbn2XlY3jt2Ht1p27KLymyfPbkxTtgWJqiWect/GZU=,tag:7pgPYcgX6902YN7JdSw1wA==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:32I13WpDrKy3wOSco+nNKMj2kdcuKH+97jr4GUAw9bu1r2Om,iv:5b1U1TrmzExDlP6mSo5kG2zS8WgEioW37fs8jrt6gxE=,tag:SaulV+U5pt8tf9/jxLg2dA==,type:str]
     SECRET_TAILSCALE_ADMIN: ENC[AES256_GCM,data:Y7lV74tCpKKySqAm,iv:eRbSznekYKvKLQUTaL83ey1lpWfminFz4Q2zdJ/Ym6s=,tag:TZcSi5v5xuByVFoOQHpGVg==,type:str]
-    SECRET_NAS_IP: ENC[AES256_GCM,data:S89CCLY3shUYhQ==,iv:qVuglqCCIuxr3MaDv6OjgYIF3F/e5bM7aclBfM5s3Js=,tag:sSbl1BNMxRlHOdWrQxcwVQ==,type:str]
+    SECRET_NAS_IP: ENC[AES256_GCM,data:NIbgWZyV2RlwKOI=,iv:oU0j5ffaaJOKotYNOZFe9VYGULWHXiXlplnuQMrQnhw=,tag:B4V5YSrPH+EPRokDnv2uzQ==,type:str]
     SECRET_NFS_PATH_ROMM_ASSETS: ENC[AES256_GCM,data:HjMNrrHCazqgvxyQVjAqGDVQ3VbxqBD7T/vt/50ATA==,iv:iahptuxR7lTZxcYu6ziDWUH4bJrGrHfuJ8wdICh9LVI=,tag:maLyQfqoMfVa3rliF8wWDg==,type:str]
     SECRET_NFS_PATH_ROMM_LIBRARY: ENC[AES256_GCM,data:nvikPEneBosbYiabKEyL8UZpxUz37/vp7N01mINMke0=,iv:VlQAklYMhNGfqwtwApDfETi0HwG5+lk9wkduBRROQig=,tag:XyRL0yNFQGsPX2aw/CkIDg==,type:str]
     SECRET_NFS_PATH_ROMM_RESOURCES: ENC[AES256_GCM,data:PVwOGTv+4Y0cEmCYLZmr4ibOih+WIGssOp7eyFk7CGSv6w==,iv:sTvh5gpczs3dXkGCwtwQk8nnftlpUOrBHsOAiOkMWSY=,tag:qDxchwTW9sKqZfHzwJRAFw==,type:str]
@@ -28,8 +28,8 @@ sops:
             Vmg3V1hoRzdEMHVwblhEazR2ZFlNTlEKrR8H1dmbtc1tNeVKD9BSu2kY7xgRH+uo
             Xct3NGYDiJqr9NlrJrV6LbsB6RliBRhjkjt8mfiFn6pGMIj5wPnRpw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-14T14:01:25Z"
-    mac: ENC[AES256_GCM,data:qvobIz8Y8b+2TI09fXIWBbnwMByqygVv+ayrEgCtC2Ck0zuHnMQiJ1ra7NkZP5QD9k500zrO3xUocBdxKy8+Unk0HLcLgc30utaUoRGOa/6xl2M1kIphudR3qnHL5TFtPfM7X5veLESrmmJOK0Pfh1oQNF4luO1HqtmqjdIeTl0=,iv:DtY9BwQU4Bh+u2WC+M2uIipKnJfDXoVCYZgm4E8H0U0=,tag:9xnuijafgr9ckYqt5wMLhA==,type:str]
+    lastmodified: "2025-05-13T12:04:44Z"
+    mac: ENC[AES256_GCM,data:ZIbBl5N2HZL3h9fXe0DNhvb6h1dphJ40MTgnhkWPg9RVGUd/3C2cVTtMLEsuWCG1dQxYoTbsIdFc/wdSwTze9QxVgKd2oXBt3uxFnHpRFIxcMJ4r9lQtGZQxw6zAWuHsIDfGxmCNzFye7A9epNw90XiXx1gSSLgmYbNchVHiT80=,iv:BSG5Y2L/Q1GS6/L0YmFigB2gEB+tC2l3fswg03UFRJE=,tag:gilQy3uwSNDPWVsWFzGHcg==,type:str]
     encrypted_regex: ^(data|stringData)$
     mac_only_encrypted: true
-    version: 3.10.1
+    version: 3.10.2
