--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -7,13 +7,13 @@ components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
-  - ./audiobookshelf/ks.yaml
+  # - ./audiobookshelf/ks.yaml
   - ./bazarr/ks.yaml
-  - ./jellyfin/ks.yaml
-  - ./jellyseerr/ks.yaml
+  # - ./jellyfin/ks.yaml
+  # - ./jellyseerr/ks.yaml
   # - ./jellystat/ks.yaml
   - ./lidarr/ks.yaml
-  - ./navidrome/ks.yaml
+  # - ./navidrome/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
   - ./recyclarr/ks.yaml
