--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -9,11 +9,11 @@ resources:
   # Flux-Kustomizations
   - ./exporters
   - ./gatus/ks.yaml
-  - ./grafana/ks.yaml
-  - ./headlamp/ks.yaml
+  # - ./grafana/ks.yaml
+  # - ./headlamp/ks.yaml
   - ./kromgo/ks.yaml
-  - ./kube-prometheus-stack/ks.yaml
-  - ./loki/ks.yaml
+  # - ./kube-prometheus-stack/ks.yaml
+  # - ./loki/ks.yaml
   - ./promtail/ks.yaml
   - ./silence-operator/ks.yaml
   - ./unpoller/ks.yaml
