--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -7,9 +7,9 @@ components:
   - ../../components/common
 resources:
   # Flux-Kustomizations
-  - ./dokuwiki/ks.yaml
+  # - ./dokuwiki/ks.yaml
   # - ./karakeep/ks.yaml
   # - ./immich/ks.yaml
   - ./immich-folder-album-creator/ks.yaml
   # - ./nextcloud/ks.yaml
-  - ./searxng/ks.yaml
+  # - ./searxng/ks.yaml
