--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   # Flux-Kustomizations
   - ./flaresolverr/ks.yaml
   # - ./pinchflat/ks.yaml
-  - ./qbittorrent/ks.yaml
+  # - ./qbittorrent/ks.yaml
