--- a/kubernetes/apps/database/cloudnative-pg/cluster/postgres17/postgres17.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/postgres17/postgres17.yaml
@@ -52,13 +52,13 @@ spec:
           key: s3-secret-key
   # Note: previousCluster needs to be set to the name of the previous cluster
   # when recovering from an existing CloudNativePG cluster.
-  bootstrap:
-    recovery:
-      source: &previousCluster postgres17-v3
+  # bootstrap:
+  #   recovery:
+  #     source: &previousCluster postgres17-v3
   # Note: externalClusters is needed when recovering from an existing
   # CloudNativePG cluster.
-  externalClusters:
-    - name: *previousCluster
-      barmanObjectStore:
-        <<: *barmanObjectStore
-        serverName: *previousCluster
+  # externalClusters:
+  #   - name: *previousCluster
+  #     barmanObjectStore:
+  #       <<: *barmanObjectStore
+  #       serverName: *previousCluster
