--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -15,7 +15,7 @@ resources:
   # - ./lidarr/ks.yaml
   # - ./navidrome/ks.yaml
   - ./prowlarr/ks.yaml
-  # - ./radarr/ks.yaml
-  # - ./recyclarr/ks.yaml
-  # - ./sonarr/ks.yaml
-  # - ./unpackerr/ks.yaml
+  - ./radarr/ks.yaml
+  - ./recyclarr/ks.yaml
+  - ./sonarr/ks.yaml
+  - ./unpackerr/ks.yaml
