--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -8,7 +8,7 @@ components:
 resources:
   # Flux-Kustomizations
   - ./audiobookshelf/ks.yaml
-  - ./bazarr/ks.yaml
+  # - ./bazarr/ks.yaml
   - ./jellyfin/ks.yaml
   - ./jellyseerr/ks.yaml
   - ./jellystat/ks.yaml
@@ -17,5 +17,5 @@ resources:
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
   - ./recyclarr/ks.yaml
-  - ./sonarr/ks.yaml
+  # - ./sonarr/ks.yaml
   - ./unpackerr/ks.yaml
