feat(kps): add nas to node-exporter ScrapeConfig

--- a/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
@@ -22,6 +22,7 @@ metadata:
 spec:
   staticConfigs:
     - targets:
+        - nas.${SECRET_DOMAIN}:9100
         - pikvm.${SECRET_DOMAIN}:9100
         - pve.${SECRET_DOMAIN}:9100
   metricsPath: /metrics
