--- a/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/scrapeconfig.yaml
@@ -39,6 +39,7 @@ metadata:
 spec:
   staticConfigs:
     - targets:
+        - nas.${SECRET_DOMAIN}:9633
         - pve.${SECRET_DOMAIN}:9633
   metricsPath: /metrics
   relabelings:
