--- a/kubernetes/apps/kube-system/cilium/app/networks.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/networks.yaml
@@ -3,11 +3,10 @@
 apiVersion: cilium.io/v2alpha1
 kind: CiliumLoadBalancerIPPool
 metadata:
-  name: l2-pool
+  name: bgp-pool
 spec:
   allowFirstLastIPs: "Yes"
   blocks:
-    # - cidr: ${NET_L2POOL_CIDR}
     - cidr: 192.168.20.32/27
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cilium.io/ciliuml2announcementpolicy_v2alpha1.json
@@ -17,12 +16,56 @@ metadata:
   name: l2-policy
 spec:
   loadBalancerIPs: true
-  # Note: Interfaces might need to be set if you have more than one active NIC on your hosts
-  # interfaces:
-  #   - ^eno[0-9]+
-  #   - ^eth[0-9]+
-  interfaces:
-    - eth0
+  # Note: Devices might need to be set if more than one active NIC exists on the hosts.
+  interfaces: ["eth0"]
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cilium.io/ciliumbgpadvertisement_v2alpha1.json
+apiVersion: cilium.io/v2alpha1
+kind: CiliumBGPAdvertisement
+metadata:
+  name: l3-bgp-advertisement
+  labels:
+    advertise: bgp
+spec:
+  advertisements:
+    - advertisementType: Service
+      service:
+        addresses: ["LoadBalancerIP"]
+      selector:
+        matchExpressions:
+          - { key: somekey, operator: NotIn, values: ["never-used-value"] }
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cilium.io/ciliumbgpclusterconfig_v2alpha1.json
+apiVersion: cilium.io/v2alpha1
+kind: CiliumBGPClusterConfig
+metadata:
+  name: l3-bgp-cluster-config
+spec:
+  nodeSelector:
+    matchLabels:
+      kubernetes.io/os: linux
+  bgpInstances:
+    - name: cilium
+      localASN: 64514
+      peers:
+        - name: gateway
+          peerASN: 64513
+          peerAddress: 192.168.20.1
+          peerConfigRef:
+            name: l3-bgp-peer-config
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cilium.io/ciliumbgppeerconfig_v2alpha1.json
+apiVersion: cilium.io/v2alpha1
+kind: CiliumBGPPeerConfig
+metadata:
+  name: l3-bgp-peer-config
+spec:
+  families:
+    - afi: ipv4
+      safi: unicast
+      advertisements:
+        matchLabels:
+          advertise: bgp
