--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -1,8 +1,8 @@
 ---
 autoDirectNodeRoutes: true
-bandwidthManager:
-  enabled: true
-  bbr: true
+# bandwidthManager:
+#   enabled: true
+#   bbr: true
 bpf:
   datapathMode: netkit
   # Ref: https://github.com/siderolabs/talos/issues/10002
