chore(cilium): enable bandwidthManager

--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -1,12 +1,12 @@
 ---
 autoDirectNodeRoutes: true
-# bandwidthManager:
-#   enabled: true
-#   bbr: true
+bandwidthManager:
+  enabled: true
+  bbr: true
 bpf:
   datapathMode: netkit
   # Ref: https://github.com/siderolabs/talos/issues/10002
-  hostLegacyRouting: true
+  # hostLegacyRouting: true
   masquerade: true
   preallocateMaps: true
   tproxy: true # Breaks accessing Cilium gateway IPs from inside cluster.
