--- a/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/network/tailscale-operator/app/helmrelease.yaml
@@ -47,5 +47,6 @@ spec:
       defaultTags:
         - "tag:k8s"
       hostname: *app
+      hostNetwork: true
       podAnnotations:
         secret.reloader.stakater.com/reload: *app
