--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -77,6 +77,8 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
+        serviceAccount:
+          identifier: *app
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -89,8 +91,8 @@ spec:
           http:
             port: *port
     serviceAccount:
-      create: true
-      name: *app
+      gatus:
+        enabled: true
     serviceMonitor:
       app:
         serviceName: *app
