--- a/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
@@ -43,11 +43,13 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
+        serviceAccount:
+          identifier: *app
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
         runAsUser: &uid 65534
         runAsGroup: *uid
     serviceAccount:
-      create: true
-      name: *app
+      system-upgrade-controller:
+        enabled: true
