Migrate to app-template 4.0.x (#566)
* feat(container)!: Update image ghcr.io/bjw-s-labs/helm/app-template ( 3.7.3 → 4.0.1 )

| datasource | package                              | from  | to    |
| ---------- | ------------------------------------ | ----- | ----- |
| docker     | ghcr.io/bjw-s-labs/helm/app-template | 3.7.3 | 4.0.1 |


Signed-off-by: deploy-demon[bot] <188457976+deploy-demon[bot]@users.noreply.github.com>

* chore: update app-template yls

* chore: modify serviceAccount for app-template changes

---------

Signed-off-by: deploy-demon[bot] <188457976+deploy-demon[bot]@users.noreply.github.com>
Co-authored-by: deploy-demon[bot] <188457976+deploy-demon[bot]@users.noreply.github.com>

--- a/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s-labs/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -43,11 +43,13 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
+        serviceAccount:
+          identifier: *app
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
         runAsUser: &uid 65534
         runAsGroup: *uid
     serviceAccount:
-      create: true
-      name: *app
+      system-upgrade-controller:
+        enabled: true
