feat(ci): add truenas area

--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -30,3 +30,6 @@ area/taskfile:
       - any-glob-to-any-file:
           - .taskfiles/**/*
           - Taskfile.yaml
+area/truenas:
+  - changed-files:
+      - any-glob-to-any-file: "truenas/**/*"
