--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -8,6 +8,7 @@
 - { name: "area/scripts",               color: "bfd4f2", description: "Changes made in the scripts directory."    }
 - { name: "area/talos",                 color: "382d56", description: "Changes made in the talos directory."      }
 - { name: "area/taskfile",              color: "28bdaf", description: "Changes made in the taskfiles directory."  }
+- { name: "area/truenas",               color: "0094d4", description: "Changes made in the truenas directory."    }
 # Renovate Types
 - { name: "renovate/container",         color: "027fa0" }
 - { name: "renovate/github-action",     color: "027fa0" }
